<resources>
    <string name="app_name">Tusome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="password">Password...</string>
    <string name="email_address">Email Address...</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_content_yet">No content yet</string>
    <string name="course">Course</string>
    <string name="department">Department</string>
    <string name="school">School</string>
    <string name="register">Register</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="username">Username</string>
    <string name="search">search</string>
    <string name="description">Description</string>
    <string name="course_code">Course code</string>
    <array name="course_codes">
        <item>SCCI</item>
        <item>SCCJ</item>
        <item>SCII</item>
    </array>
    <array name="courses">
        <item>Computer Technology</item>
        <item>Computer Networks</item>
        <item>Information Technology</item>
    </array>
</resources>