<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ExamFragment">
    <LinearLayout
        android:id="@+id/criteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/criteria_tl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:hint="@string/course"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/course_spinner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:src="@drawable/search"
            android:text="@string/search"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exams_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:paddingStart="5dp"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criteria"
        android:visibility="gone"
        tools:listitem="@layout/unit_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingTop="5dp"
        android:paddingEnd="5dp" />

    <ImageView
        android:id="@+id/empty_box_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="2"
        android:scaleY="2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/empty_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_box_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:fontFamily="casual"
        android:text="@string/no_content_yet"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/empty_box_iv"
        app:layout_constraintStart_toStartOf="@id/empty_box_iv"
        app:layout_constraintTop_toBottomOf="@id/empty_box_iv" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/add_exam_fab"
        android:contentDescription="@string/app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>