<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/course">

        <AutoCompleteTextView
            android:id="@+id/course_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@id/course_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/course_code">

        <AutoCompleteTextView
            android:id="@+id/course_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:labelFor="@id/course_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_department"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_department_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"
            android:inputType="text"
            android:labelFor="@id/course_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_school"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/course_school_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"
            android:inputType="text"
            android:labelFor="@id/course_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="Cancel"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:backgroundTint="#F12020"
            android:id="@+id/cancel_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="Submit"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#74D62E"
            android:id="@+id/submit_btn"/>
    </RelativeLayout>

</LinearLayout>